<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RandomActivity">

    <ImageButton
        android:id="@+id/BTNBackR"
        android:layout_width="74dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/return_button"
        android:src="@drawable/ic_baseline_navigate_before_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVRandomTitle"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/randomTitle"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BTNBackR"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/TVSuggestDescriptionR"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:hint="@string/app_name"
        android:text=""
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVRandomTitle" />

    <ImageView
        android:id="@+id/IVParticipantsR"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="256dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTNBackR"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/IVPriceR"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVParticipantsR"
        app:srcCompat="@drawable/ic_baseline_attach_money_24" />

    <TextView
        android:id="@+id/TVParticipantLabelR"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:text="@string/participants"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/IVParticipantsR"
        app:layout_constraintStart_toEndOf="@+id/IVParticipantsR"
        app:layout_constraintTop_toTopOf="@+id/IVParticipantsR" />

    <TextView
        android:id="@+id/TVPriceR"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:text="@string/price"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/IVPriceR"
        app:layout_constraintStart_toEndOf="@+id/IVPriceR"
        app:layout_constraintTop_toTopOf="@+id/IVPriceR" />

    <TextView
        android:id="@+id/TVParticipantResultR"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/TVParticipantLabelR"
        app:layout_constraintStart_toEndOf="@+id/TVParticipantLabelR"
        app:layout_constraintTop_toTopOf="@+id/TVParticipantLabelR" />

    <TextView
        android:id="@+id/TVPriceResultR"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/TVPriceR"
        app:layout_constraintStart_toEndOf="@+id/TVPriceR"
        app:layout_constraintTop_toTopOf="@+id/TVPriceR" />

    <ImageView
        android:id="@+id/IVTypeR"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVPriceR"
        app:srcCompat="@drawable/ic_baseline_format_list_bulleted_24" />

    <TextView
        android:id="@+id/TVTypeR"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/IVTypeR"
        app:layout_constraintStart_toEndOf="@+id/IVTypeR"
        app:layout_constraintTop_toTopOf="@+id/IVTypeR" />

    <Button
        android:id="@+id/BTNTryAnotherR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/try_another"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>