<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ImageButton
        android:id="@+id/BTNBack"
        android:layout_width="74dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/return_button"
        android:src="@drawable/ic_baseline_navigate_before_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVSuggestTitle"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text=""
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BTNBack"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/TVSuggestDescription"
        android:layout_width="197dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVSuggestTitle" />

    <ImageView
        android:id="@+id/IVParticipants"
        android:layout_width="38dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="256dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTNBack"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/IVPrice"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVParticipants"
        app:srcCompat="@drawable/ic_baseline_attach_money_24" />

    <TextView
        android:id="@+id/TVParticipantLabel"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="88dp"
        android:text="@string/participants"
        app:layout_constraintStart_toEndOf="@+id/IVParticipants"
        app:layout_constraintTop_toBottomOf="@+id/TVSuggestDescription" />

    <TextView
        android:id="@+id/TVPrice"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/price"
        app:layout_constraintStart_toEndOf="@+id/IVPrice"
        app:layout_constraintTop_toBottomOf="@+id/TVParticipantLabel" />

    <TextView
        android:id="@+id/TVParticipantResult"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toEndOf="@+id/TVParticipantLabel"
        app:layout_constraintTop_toBottomOf="@+id/TVSuggestDescription" />

    <TextView
        android:id="@+id/TVPriceResult"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/TVPrice"
        app:layout_constraintTop_toBottomOf="@+id/TVParticipantResult" />

    <Button
        android:id="@+id/BTNTryAnother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/try_another"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>